2010-10-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backport of revision 9220 from trunk.

	Drop over 3500 lines of code by replacing a last use of the
	hlst and harglists code.

	* nasl/nasl_socket.c (struct udp_record): New. Stores a
	udp record with length information to be used for hashtable.
	(add_udp_data, get_udp_data, rm_udp_data): Replace the whole
	implementation of harglists by glib's hashtable.

	* nasl/nasl.c: Removed include of harglists.h.

	* misc/hlst.c, misc/hlst.h, misc/harglists.c,
	misc/harglists.h: Removed.

	* misc/CMakeLists.txt: Removed handling of modules hlst and harglist.

	* COPYING, MANIFEST: Removed entries for harglist and hlst.

2010-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Fixed two typos.

2010-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* VERSION: Set to 3.1.4.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 3.1.3 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.1.3.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-09-05 Thomas Reinke <reinke@securityspace.com>

	* misc/store.c: kept memory management model consistent
	  by using estrdup instead of g_strdup for arglists when
	  freeing up is done with efree

2010-09-03 Thomas Reinke <reinke@securityspace.com>

	* misc/store.c: removed extra plug_set_family call

2010-09-03 Thomas Reinke <reinke@securityspace.com>

	* base/nvti.c: free memory allocated from use of glib routines

2010-08-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/share_fd.c: Add missing includes to make sure all neccessary
	defines are indeed defined and recv_fd operates properly.

2010-08-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_report, omp_get_report_format): Temporarily pass