@@ -32,6 +32,8 @@
 #include "arglists.h"
 #include "system_internal.h"
 
+#include "system.h"
+
 #define HASH_MAX 2713
 
 /**
@@ -530,4 +532,75 @@ arg_del_value (args, name)
   element->next = NULL;
 
   arg_free (element);
+}
+
+char *
+arglist2str (struct arglist *arg)
+{
+  char *ret;
+  int sz;
+
+  if (arg == NULL)
+    return estrdup ("");
+
+  if (arg->name == NULL)
+    return estrdup ("");
+
+  sz = (strlen (arg->name) + 1) * 10;
+  ret = emalloc (sz);
+  strncpy (ret, arg->name, sz - 1);
+  arg = arg->next;
+  if (arg == NULL)
+    return ret;
+
+  while (arg->next != NULL)
+    {
+      if (arg->name == NULL)
+        return ret;
+      if (strlen (arg->name) + 3 + strlen (ret) >= sz)
+        {
+          sz = strlen (arg->name) + 3 + strlen (ret) * 2;
+          ret = erealloc (ret, sz);
+        }
+      strncat (ret, ", ", sz - 1);      /* RATS: ignore */
+      strncat (ret, arg->name, sz - 1); /* RATS: ignore */
+      arg = arg->next;
+    }
+  return ret;
+}
+
+
+struct arglist *
+str2arglist (char *str)
+{
+  struct arglist *ret;
+  char *t;
+
+  if (!str || str[0] == '\0')
+    {
+      return NULL;
+    }
+
+  t = strchr (str, ',');
+
+  ret = emalloc (sizeof (struct arglist));
+
+  while ((t = strchr (str, ',')) != NULL)
+    {
+      t[0] = 0;
+      while (str[0] == ' ')
+        str++;
+      if (str[0] != '\0')
+        {
+          arg_add_value (ret, str, ARG_INT, 0, (void *) 1);
+        }
+      str = t + 1;
+    }
+
+  while (str[0] == ' ')
+    str++;
+  if (str[0] != '\0')
+    arg_add_value (ret, str, ARG_INT, 0, (void *) 1);
+
+  return ret;
 }
