@@ -1,3 +1,15 @@
+2010-10-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Backport of revision 9223 from trunk.
+
+	Move arglist-related functions into module arglists.
+
+	* misc/arglists.c (arglist2str, str2arglist): New.
+
+	* misc/arglists.h: Added protos accordingly.
+
+	* misc/store.c (arglist2str, str2arglist): Removed.
+
 2010-10-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Backport of revision 9220 from trunk.
